--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html
     .nav-row
         header.nav-row
             .grid-left
-                a.desc(href="/") Babe Inventory
+                a.desc(href="/") Overstock Inventory
             .grid-right
                 nav
                     a(href='/scan') Scan
