--- a/views/index.jade
+++ b/views/index.jade
@@ -17,9 +17,9 @@ block content
     table.table-striped.table-bordered.table-responsive#myTable(width="80%", align="center", style="font-size:18px;border-collapse:collapse" )
      tr
       td
-       input.form-control.scanner(type="text", required, id="upc", placeholder="UPC #1",  name="upc1", size="10")
+       input.form-control.scanner(type="text", required, id="upc", placeholder="UPC",  name="upc1", size="10")
       td
-       input.form-control.quan.scanner(type="number", required, placeholder="QUANTITY #1",  name="quantity1", size="10")
+       input.form-control.scanner(type="number", required, placeholder="QUANTITY",  name="quantity1", size="10")
     button.btn.invSub(type="submit", onclick="return checker();", style="font-size:35px;") Submit
  
 
