--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
 
   h5(style="color:red;")=success
 
-  div.inputFields(style="background:#D0D0D0; width:90%; margin:80px auto; padding-top:20px; padding-bottom:50px; border-radius: 8px;")
+  div.inputFields(style="background:#D0D0D0; width:70%; margin:80px auto; padding-top:20px; padding-bottom:50px; border-radius: 8px;")
    h2(style="text-align:center; padding-bottom: 10px;")=error
    div(style="float:right; margin-top: 0.35%; padding-right: 10px;")
     //- button.btn.btn-warning(onclick="myDeleteFunction()", style="font-size: 40px; background-color:red; color:white; border: 1px solid;") &#8593;
@@ -14,13 +14,14 @@ block content
     //- button.btn.btn-warning(onclick="myCreateFunction()", style="font-size: 40px; background-color:green; color: white; border: 1px solid #ddd;") &#8595;
 
    form(role='form', method="Post", action="/locateThree", name="ProductQuantity")
-    table.table-striped.table-bordered.table-responsive#myTable(width="80%", align="center", style="font-size:18px;border-collapse:collapse" )
+    table.table-striped.table-bordered.table-responsive(width="80%", align="center", style="font-size:18px;border-collapse:collapse" )
      tr
       td
-       input.form-control.scanner(type="text", required, id="upc", placeholder="UPC",  name="upc1", size="10")
+       input.form-control.upc(type="text", required, placeholder="UPC",  name="upc1", size="10", style="font-size: 13px; margin:0px; height:80px; text-align:center; padding-right: 60px;")
       td
-       input.form-control.scanner(type="number", required, placeholder="QUANTITY",  name="quantity1", size="10")
+       input.form-control.upc(type="number", required, placeholder="QUANTITY",  name="quantity1", size="10", style="font-size: 13px;padding:0px; margin:0px; height:80px;text-align:center;")
     button.btn.invSub(type="submit", onclick="return checker();", style="font-size:35px;") Submit
+    
  
 
      
