--- a/views/upc.jade
+++ b/views/upc.jade
@@ -8,10 +8,9 @@ block content
 
   div(style="width:700px; margin:0 auto")
    h2(style="color:black;") Notes for uploading a new UPC:
-   h5(style="text-align:left; color:black;") 1.  Description must contain all 3 Periods EX: 22.ICURLY.3R.
-   h5(style="text-align:left; color:black;") 2.  The upc must be unassigned (While you can add a upc that already exists....try to make sure they are not in the system)
-   h5(style="text-align:left; color:black;") 3.  Use .csv file type......you can download the correct template below
-   h5(style="text-align:left; color:black;") 4.  On .csv, make sure blank fields are cleared (This will slow down the import porcess if there are unneccessary blank rows)
+   h5(style="text-align:left; color:black;") 1.  The upc must be NEW (While you can add a upc that already exists....try to make sure they are not in the system)
+   h5(style="text-align:left; color:black;") 2.  Use .csv file type......you can download the correct template below
+   h5(style="text-align:left; color:black;") 3.  On .csv, make sure blank fields are cleared (This will slow down the import porcess if there are unneccessary blank rows)
    h5(style="text-align:left; color:black;") 4.  Name the .csv file with a date so that you can identify it for reference
 
    h5(id="header", style="padding-top: 25px; color:red; font-weight: 700;") DOWNLOAD UPC UPLOAD TEMPLATE BELOW
