--- a/views/editproduct.jade
+++ b/views/editproduct.jade
@@ -2,8 +2,15 @@ extends layout
 
 block content
   
+  div(style="padding-top:50px;")
+  div(style="padding-top:50px;")
+   a.search.btn(href="/scan" style="padding-bottm: 20px; font-size: 28px;") Scan
+  div(style="padding-top:10px;")
+  div
+   a.search.btn(href="/search" style="padding-bottm: 20px; font-size: 28px;") Search
+  h5(style="color:red; padding-top: 20px;")=success
+  h5(style="padding-top: 10px; padding-bottom:20px;") Update Product You have Just Added
 
-  h1(style="padding-top: 40px; padding-bottom:20px;") Update UPC
   form(method="Post", action="/update", name="update")
    button.search.btn(type="submit", style="font-size:15px;", onclick="return updateAlert();") Save
    table.table-striped.table-bordered.table-responsive(width="90%", align="center", style="font-size:18px; color:black; padding-bottom: 35px;")
