--- a/views/index.jade
+++ b/views/index.jade
@@ -17,9 +17,11 @@ block content
     table.table-striped.table-bordered.table-responsive(width="80%", align="center", style="font-size:18px;border-collapse:collapse" )
      tr
       td
-       input.form-control.upc(type="text", required, placeholder="UPC",  name="upc1", size="10", style="font-size: 13px; margin:0px; height:80px; text-align:center; padding-right: 60px;")
+       input.form-control.upc(type="text", required, placeholder="UPC",  name="upc1", size="20", style="font-size: 16px; margin:0px; height:80px; padding:0px; text-align:center;")
       td
-       input.form-control.upc(type="number", required, placeholder="QUANTITY",  name="quantity1", size="10", style="font-size: 13px;padding:0px; margin:0px; height:80px;text-align:center;")
+       input.form-control.upc(type="number", required, placeholder="QUANTITY",  name="quantity1", size="20", style="font-size: 16px; margin:0px; height:80px; padding:0px;text-align:center;")
+      td
+       input.form-control.upc(type="text", required, placeholder="LOCATION",  name="location1", size="20", style="font-size: 16px; padding:0px; margin:0px; height:80px; text-align:center;")
     button.btn.invSub(type="submit", onclick="return checker();", style="font-size:35px;") Submit
     
  
