--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ html
                     a(href='/scan') Scan
                     a(href='/search') Search
                     a(href='/addUpc') Create UPC
+                    a(href='/downloadUpc') Download UPC
    
 
     block content
