--- a/views/downloadUpc.jade
+++ b/views/downloadUpc.jade
@@ -7,7 +7,7 @@ block content
    button.search.btn(type="submit", style="font-size:25px;") Search
    table.table-striped.table-bordered.table-responsive(width="90%", align="center", style="font-size:18px; color:black; padding-bottom: 35px;")
     tr(style="margin: 0 auto; background: #52bab3;")
-     td #[b UPC's]
+     td #[b UPC]
     tr
      td(width="50%;")
       input.form-control.upc(type="text", placeholder="barcode", size="12", name="barcode", style="font-size: 16px;padding:0px; margin:0px; height:50px;text-align:center;")
