--- a/views/downloadMultipleQuery.jade
+++ b/views/downloadMultipleQuery.jade
@@ -2,26 +2,13 @@ extends layout
 
 block content
   
-  h1(style="padding-top: 40px;") Search Inventory
+  h1(style="padding-top: 40px;") Download UPCs
   
-  form(method="Post", action="/query", name="DBQuery", style="padding-bottom: 50px; padding-top: 50px;")
-   button.search.btn(type="submit", style="font-size:15px;") Search
    table.table-striped.table-bordered.table-responsive(width="90%", align="center", style="font-size:18px; color:black;")
     tr(style="margin: 0 auto; background: #52bab3;")
      td #[b UPC]
      td #[b DESCRIPTION]
      td #[b LOCATION]
-     td #[b Update]
-     td #[b Delete]
-    tr
-     td(width="20%;")
-      input.form-control.upc(type="text", placeholder="barcode", size="8", name="barcode", style="font-size: 13px;padding:0px; margin:0px;height:50px;text-align:center;")
-     td(width="20%;")
-      input.form-control.location(type="text", placeholder="DES.CRIP.TION", size="8", name="description", style="font-size: 13px;padding:0px; margin:0px;height:50px;text-align:center;")
-     td(width="20%;")
-      input.form-control.location(type="text", placeholder="location", size="8", name="location", style="font-size: 13px;padding:0px; margin:0px;height:50px;text-align:center;")
-     td(width="20%;")
-      input.form-control.quantity(type="text", placeholder="qty", size="8", name="qty", style="font-size: 13px;padding:0px; margin:0px;height:50px;text-align:center;")
      
 
     if (nums.length)
@@ -29,10 +16,9 @@ block content
       tr
        td= post.upc
        td= post.description
-       td= post.location 
-       td= post.quantity
-       td #[a(href="/updateproduct/#{post.id}") Update]
-       td #[a(href="/deleteuser/#{post.id}", onclick="return warningList();") Delete]
+       td= post.location
+
+  button.search.btn(type="submit", style="font-size:15px;") Download Upcs
 
      
   //- #myModal.modal.fade(role='dialog')
