--- a/views/downloadUpc.jade
+++ b/views/downloadUpc.jade
@@ -1,16 +1,16 @@
 extends layout
 
 block content
-  h1(style="padding-top: 40px; padding-bottom: 40px;") Search Inventory
-  h5=message
+  h1(style="padding-top: 40px; padding-bottom: 40px;") Download Multiple UPC's
+  h5 *Comma Separated Search
   form(method="Post", action="/queryMultiple", name="DBQuery", style="padding-bottom:50px;")
    button.search.btn(type="submit", style="font-size:25px;") Search
-   table.table-striped.table-bordered.table-responsive(width="90%", align="center", style="font-size:18px; color:black; padding-bottom: 35px;")
+   table.table-striped.table-bordered.table-responsive(width="50%", align="center", style="font-size:18px; color:black; padding-bottom: 35px;")
     tr(style="margin: 0 auto; background: #52bab3;")
      td #[b UPC]
     tr
      td(width="50%;")
-      input.form-control.upc(type="text", placeholder="barcode", size="12", name="barcode", style="font-size: 16px;padding:0px; margin:0px; height:50px;text-align:center;")
+      input.form-control.upc(type="text", placeholder="UPC1,UPC2,UPC3", size="12", name="barcode", style="font-size: 16px;padding:0px; margin:0px; height:50px;text-align:center;")
   
 
   //- div(style="width:700px; margin:0 auto")
