--- a/views/downloadMultipleQuery.jade
+++ b/views/downloadMultipleQuery.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   
-  h1(style="padding-top: 40px;") Download UPCs
+  h1(style="padding-top: 40px; padding-bottom: 20px;") Download UPCs
   
    table.table-striped.table-bordered.table-responsive(width="90%", align="center", style="font-size:18px; color:black;")
     tr(style="margin: 0 auto; background: #52bab3;")
@@ -19,8 +19,12 @@ block content
         td= post.description
         td= post.location
 
-  form(method="POST", action="/downloadcsv", name="downloadcsv")
-   button.search.btn(type="submit", style="font-size:15px;") Download Upcs
+
+
+  h5(style="text-align:center; color:black; padding-top: 70px;") Download your UPCs + Shelf Locations
+   ul(style="width:300px; margin:0 auto; padding-bottom: 70px;padding-top:10px;")
+    li(style="font-size: 20px; color: black;")
+     a(href="/uploads/upcdownload.csv" style="font-size: 20px;") CLICK HERE
 
      
   //- #myModal.modal.fade(role='dialog')
